--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="div2">
             <h2>The Law always limits every Power it Gives</h2>
             <p>Our site is build to help people stay aware of legal laws of India</p>
-            <a href="#Section3"><button id="Action_Button">All Laws</button></a>
+            <a href="laws.html"><button id="Action_Button">All Laws</button></a>
         </div>
     </section>
 
