--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="Images/justise lady.jpg" alt="heroImage">
         </div>
         <div id="div2">
-            <h2>The Law always limits every Power it Gives</h2>
+            <h2 class="h_primary">The Law always limits every Power it Gives</h2>
             <p>Our site is build to help people stay aware of legal laws of India</p>
             <a href="laws.html"><button id="Action_Button">All Laws</button></a>
         </div>
