--- a/laws.html
+++ b/laws.html
@@ -21,10 +21,10 @@
 
         <ul class="menu-items hide-menu">
             <li><a href="index.html">Home</a></li>
-            <li><a class=active href="laws.html">All Laws</a></li>
-            <li><a href="">Option2</a></li>
-            <li><a href="#">Option3</a></li>
-            <li><a href="#">Option4</a></li>
+            <li><a class="active" href="laws.html">All Laws</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="Contact.html">Contact Us</a></li>
+            <li><a href="terms.html">Terms of Use</a></li>
         </ul>
 
         <div class="burger">
