--- a/about.html
+++ b/about.html
@@ -32,6 +32,50 @@
         </div>
     </nav>
 
+    <section>
+        <div class="terms">
+            <h2>About-us</h2>
+            Law in India primarily evolved from customary practices and religious prescription to the modern well
+            codified acts
+            and laws based on a constitution. This website basically shares some general information Indian Law System
+            with
+            specifications.
+            <P> An Internship Project was alloted to our group consisting of 5 students where we had to create this
+                website
+                based on Indian Law Information System. This website is not a professional website yet we have tried to
+                put the
+                basic information about the subject and we have tried to add some designs and styles by using cascading
+                style
+                sheet to make the website look prominent. </P>
+            <P>This website states the function of each laws or articles of the constitution from article 1 to article
+                100. Each
+                article describes its presence and its work. We hope this website may set up the glimpse of a basic idea
+                about
+                Indian Law System.</P>
+            <P>We have created this website by using VS code application. In this website, we have placed the navigation
+                bar,
+                added
+                different sections which provides lots of information relating the subject, lastly added a footer. The
+                Home page
+                has been designed gently by giving it a general look. Two to three pages are added to this website which
+                shares
+                the information about the subject. </P>
+            <P>We the team of Group number 6 have created this website under the guidance of Sir Saroj Kumar Nandi,
+                Proffessor
+                of Icfai University. Myself Sneha Gope and my team mates- Nanday Das, Diptanu Debnath, Rituparna Sen
+                were
+                constantly working on this website to present it successfully. For sure there were some other students
+                in my
+                group or team but unfortunately they did not responded well any of the day.</P>
+
+            We are grateful to Icfai University for letting us to work on this project as we have gathered much
+            informations
+            about Indian Law System and have known how to work on a project creating a website. We would like to work on
+            further
+            projects in the future which will be given by Icfai University.
+        </div>
+    </section>
+
     <footer>
         <div id="footer_devider">
             <div class="footer_box" id="f1">
