--- a/laws.html
+++ b/laws.html
@@ -33,6 +33,9 @@
     </nav>
 
     <section id="laws">
+        <h3>PART I</h3>
+        <p>THE UNION AND ITS TERRITORY</p>
+
         <button class="accordion">1. Name and territory of the Union.</button>
         <div class="panel">
             <p>Article 1 in the Constitution states that India, that is Bharat, shall be a Union of States. The
@@ -66,6 +69,9 @@
                 First Schedule and the Fourth Schedule as may be necessary to give effect to the provisions of the law
                 and may also contain such supplemental, incidental and consequential provisions</p>
         </div>
+
+        <h3>PART II</h3>
+        <p>CITIZENSHIP</p>
 
         <button class="accordion">5. Citizenship at the commencement of the Constitution.</button>
         <div class="panel">
@@ -117,6 +123,9 @@
                 shall derogate from the power of Parliament to make any provision with respect to the acquisition and
                 termination of citizenship and all other matters relating to citizenship.</p>
         </div>
+
+        <h3>PART III</h3>
+        <p>FUNDAMENTAL RIGHTS</p>
 
         <button class="accordion">12. Definition.</button>
         <div class="panel">
