--- a/laws1.html
+++ b/laws1.html
@@ -91,6 +91,9 @@
                 under the fundamental rights part.</p>
         </div>
 
+        <h3>PART IV</h3>
+        <p>DIRECTIVE PRINCIPLES OF STATE POLICY</p>
+
         <button class="accordion">36. Definition.</button>
         <div class="panel">
             <p> It states that in Part IV of Indian Constitution, the meaning of the word ‘state’ is the same as defined
@@ -244,12 +247,17 @@
                 peoples with one another.</p>
         </div>
 
+        <h3>PART IV A</h3>
+        <p>FUNDAMENTAL DUTIES</p>
+
         <button class="accordion">51A. Fundamental duties.</button>
         <div class="panel">
-            <p>It shall be the duty of every citizen of India— (a) to abide by the Constitution and respect its ideals
-                and institutions, the National Flag and the National Anthem; (b) to cherish and follow the noble ideals
-                which inspired our national struggle for freedom.</p>
+            <p>It shall be the duty of every citizen of India to abide by the Constitution and respect its ideals and
+                institutions, the National Flag and the National Anthem.</p>
         </div>
+
+        <h3>PART V</h3>
+        <p>THE UNION</p>
 
         <button class="accordion">52. The President of India.</button>
         <div class="panel">
