--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <img src="Images/justise lady.jpg" alt="heroImage">
         </div>
         <div id="div2">
-            <h2 class="h_primary">The Law always limits every Power it Gives</h2>
+            <h2 class="h_primary"><span class="txt-rotate" data-period="2000"
+                    data-rotate='[ "Justice Delayed is Justice Denied", "The Law always limits every Power it Gives", "Justice Anywhere is a Threat to Justice Everywhere", "This is a court of law, Young Man, Not a court of Justice" ]'></span>
+            </h2>
             <p>Our site is build to help people stay aware of legal laws of India</p>
             <a href="laws.html"><button id="Action_Button">All Laws</button></a>
         </div>
@@ -149,6 +151,62 @@
         burger.addEventListener('click', () => {
             Menu.classList.toggle('hide-menu');
         })
+
+        var TxtRotate = function (el, toRotate, period) {
+            this.toRotate = toRotate;
+            this.el = el;
+            this.loopNum = 0;
+            this.period = parseInt(period, 10) || 2000;
+            this.txt = '';
+            this.tick();
+            this.isDeleting = false;
+        };
+
+        TxtRotate.prototype.tick = function () {
+            var i = this.loopNum % this.toRotate.length;
+            var fullTxt = this.toRotate[i];
+
+            if (this.isDeleting) {
+                this.txt = fullTxt.substring(0, this.txt.length - 1);
+            } else {
+                this.txt = fullTxt.substring(0, this.txt.length + 1);
+            }
+
+            this.el.innerHTML = '<span class="wrap">' + this.txt + '</span>';
+
+            var that = this;
+            var delta = 150 - Math.random() * 100;
+
+            if (this.isDeleting) { delta /= 2; }
+
+            if (!this.isDeleting && this.txt === fullTxt) {
+                delta = this.period;
+                this.isDeleting = true;
+            } else if (this.isDeleting && this.txt === '') {
+                this.isDeleting = false;
+                this.loopNum++;
+                delta = 500;
+            }
+
+            setTimeout(function () {
+                that.tick();
+            }, delta);
+        };
+
+        window.onload = function () {
+            var elements = document.getElementsByClassName('txt-rotate');
+            for (var i = 0; i < elements.length; i++) {
+                var toRotate = elements[i].getAttribute('data-rotate');
+                var period = elements[i].getAttribute('data-period');
+                if (toRotate) {
+                    new TxtRotate(elements[i], JSON.parse(toRotate), period);
+                }
+            }
+            var css = document.createElement("style");
+            css.type = "text/css";
+            css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
+            document.body.appendChild(css);
+        };
     </script>
 
 </body>
