--- a/terms.html
+++ b/terms.html
@@ -14,10 +14,12 @@
 <body>
 
     <nav class="container">
-        <div class="logo">
-            <img src="Images/balance_white.png" alt="IndianLaw">
-            <h1 class="logo">IndianLaw</h1>
-        </div>
+        <a href="index.html">
+            <div class="logo">
+                <img src="Images/balance_white.png" alt="IndianLaw">
+                <h1 class="logo">IndianLaw</h1>
+            </div>
+        </a>
 
         <ul class="menu-items hide-menu">
             <li><a href="index.html">Home</a></li>
