--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indian Law</title>
     <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1024px)" href="Style/tablet.css" />
     <link rel="stylesheet" media="screen and (max-width: 720px)" href="Style/mobile.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
