--- a/laws.html
+++ b/laws.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" media="screen and (max-width: 1024px)" href="Style/tablet.css" />
     <link rel="stylesheet" media="screen and (max-width: 720px)" href="Style/mobile.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -270,12 +271,231 @@
                 administer educational institutions of their choice.</p>
         </div>
 
+        <button class="accordion">31A. Saving of Laws providing for acquisition of estates, etc.</button>
+        <div class="panel">
+            <p>Saving of laws providing for acquisition of estates,
+                etc ( 1 ) Notwithstanding anything contained in Article 13, no law providing for. (a) the acquisition by
+                the State of any estate or of any rights therein or the extinguishment or modification of any such
+                rights</p>
+        </div>
+
+        <button class="accordion">31B.Validation of certain Acts and Regulations.</button>
+        <div class="panel">
+            <p>Article 31b of Indian Constitution states that the provisions mentioned in Article 31a are immune from
+                Indian judiciary and cannot be nulled on the basis that they might violate the fundamental rights
+                mentioned in Articles 14, 19 and 31 of Indian Constitution.</p>
+        </div>
+
+        <button class="accordion">31C. Saving of laws giving effect to certain directive principles.</button>
+        <div class="panel">
+            <p>1.Any law made in order to give effect to Article 39b and Article 39c of Indian Constitution will avoid
+                the scrutiny of courts even if it violates Article 14 and Article 19 of the Indian Constitution.
+                2.Courts will not have the jurisdiction to decide whether the law enabled really gives effect to the
+                principles mentioned in Article 39cand 39b of Indian Constitution.
+            </p>
+        </div>
+
+        <button class="accordion">32. Remedies for enforcement of rights conferred by this Part.</button>
+        <div class="panel">
+            <p>Under Article 32 the Supreme Court have power to issue directions or orders or writs, including writs in
+                the nature of habeas corpus, mandamus, prohibition, quo warranto and certiorari. The right guaranteed by
+                this Article ‘shall not be suspended except as otherwise provided for by this Constitution’.</p>
+        </div>
+
+        <button class="accordion">33. Power of Parliament to modify the rights conferred by this Part in their
+            application to Forces, etc.</button>
+        <div class="panel">
+            <p>Article 33 empowers the parliament (not state legislature) to restrict or abrogate the fundamental rights
+                of the members of armed forces, paramilitary forces & analogous forces. Main aim for this provision is
+                to ensure the proper discharge of their duties and to maintain discipline amongst them.</p>
+        </div>
+
+        <button class="accordion">34. Restriction on rights conferred by this Part while martial law is in force in any
+            area.
+        </button>
+        <div class="panel">
+            <p>Notwithstanding anything in the foregoing provisions of this Part, Parliament may by law identify any
+                person in the service of the Union or of a State or any other person in respect of any act done by him
+                in connection with the maintenance of order in any area within the territory of India
+                where martial law was in force or validate any sentence passed, punishment inflicted, forfeiture
+                ordered.</p>
+        </div>
+
+        <button class="accordion">35. Legislation to give effect to the provisions of this Part.
+        </button>
+        <div class="panel">
+            <p>Article 35 gives Parliament the exclusive power to make laws relating to Articles 16
+                (3), 32 (3), 33 and 34. Further, this Article enables the Parliament to prescribe punishment to offences
+                under the fundamental rights part.</p>
+        </div>
+
+        <h3>PART IV</h3>
+        <p>DIRECTIVE PRINCIPLES OF STATE POLICY</p>
+
+        <button class="accordion">36. Definition.</button>
+        <div class="panel">
+            <p> It states that in Part IV of Indian Constitution, the meaning of the word ‘state’ is the same as defined
+                in
+                Article 12 of Indian Constitution. State includes Government and Parliament of India, government and the
+                Legislature of each of the States and other local authorities that come under the government of India.
+            </p>
+        </div>
+
+        <button class="accordion">37. Application of the principles contained in this Part.</button>
+        <div class="panel">
+            <p>Article 37 defines the nature of Directive Principles of State Policy that is they are not enforceable in
+                courts like Fundamental Rights in part III of constitution but still in the working of state machinery
+                they hold paramount importance. And for their enforcement the legislature makes the competent amendment
+                and law or Act.
+            </p>
+        </div>
+
+        <button class="accordion">38. State to secure a social order for the promotion of welfare of the
+            people.</button>
+        <div class="panel">
+            <p>(1)The State shall strive to promote the welfare of the people by securing and protecting as effectively
+                as it may a social order in which justice, social, economic and political, shall inform all the
+                institutions of the national life.
+                (2) The State shall strive to minimise the inequalities in income, and endeavour to
+                eliminate inequalities in status, facilities and opportunities, not only amongst individuals but also
+                amongst groups of people residing in different areas or engaged in different vocations. </p>
+        </div>
+
+        <button class="accordion">39. Certain principles of policy to be followed by the State.</button>
+        <div class="panel">
+            <p>It directed the State to protect and promote the economic welfare of citizens with special emphasis on
+                the weaker sections of society.</p>
+        </div>
+
+        <button class="accordion">39A. Equal justice and free legal aid.</button>
+        <div class="panel">
+            <p>The State shall secure that the operation of the legal system promotes justice, on a basis of equal
+                opportunity, and shall, in particular, provide free legal aid, by suitable legislation or schemes or in
+                any other way, to ensure that opportunities for securing justice are not denied to any citizen by reason
+                of economic or other disabilities.</p>
+        </div>
+
+        <button class="accordion">40. Organisation of village panchayats.</button>
+        <div class="panel">
+            <p>The State shall take steps to organise village panchayats and endow them with such powers and authority
+                as may be necessary to enable them to function as units of self-government.</p>
+        </div>
+
+        <button class="accordion">41. Right to work, to education and to public assistance in certain cases.</button>
+        <div class="panel">
+            <p>The State shall, within the limits of its economic capacity and development, make effective provision for
+                securing the right to work, to education and to public assistance in cases of unemployment, old age,
+                sickness and disablement, and in other cases of undeserved want.</p>
+        </div>
+
+        <button class="accordion">42. Provision for just and humane conditions of work and maternity relief.</button>
+        <div class="panel">
+            <p>The State shall make provision for securing just and humane conditions of work and for maternity relief.
+            </p>
+        </div>
+
+        <button class="accordion">43. Living wage, etc., for workers.</button>
+        <div class="panel">
+            <p>The State shall endeavour to secure, by suitable legislation or economic organisation or in any other
+                way, to all workers, agricultural, industrial or otherwise, work, a living wage, conditions of work
+                ensuring a decent standard of life and full enjoyment of leisure and social and cultural opportunities
+                and, in particular, the State shall endeavour to promote cottage industries on an individual or
+                co-operative basis in rural areas.</p>
+        </div>
+
+        <button class="accordion">43A. Participation of workers in management of industries.</button>
+        <div class="panel">
+            <p>The State shall take steps, by suitable legislation or in any other way, to secure the participation of
+                workers in the management of undertakings, establishments or other organisations engaged in any
+                industry.</p>
+        </div>
+
+        <button class="accordion">43B. Promotion of co-operative societies.</button>
+        <div class="panel">
+            <p> Promotion of co-operative societies. The State shall endeavour to promote voluntary formation,
+                autonomous functioning, democratic control and professional management of co-operative societies.</p>
+        </div>
+
+        <button class="accordion">44. Uniform civil code for the citizens.</button>
+        <div class="panel">
+            <p>Uniform civil code for the citizens The State shall endeavour to secure for the citizens a uniform civil
+                code throughout the territory of India.</p>
+        </div>
+
+        <button class="accordion">45. Provision for early childhood care and education to children below the age of six
+            years.</button>
+        <div class="panel">
+            <p>The State shall endeavour to provide, within a period of ten years from the commencement of this
+                Constitution, for free and compulsory education for all children until they complete the age of fourteen
+                years. </p>
+        </div>
+
+        <button class="accordion">46. Promotion of educational and economic interests of Scheduled Castes, Scheduled
+            Tribes and other weaker sections.</button>
+        <div class="panel">
+            <p>The State shall promote, with special care, the education and economic interests of the weaker sections
+                of the people, and, in particular of the Scheduled Castes and Scheduled Tribes, and shall protect them
+                from social injustice and all forms of social exploitation.</p>
+        </div>
+
+        <button class="accordion">47. Duty of the State to raise the level of nutrition and the standard of living and
+            to improve public health.</button>
+        <div class="panel">
+            <p>Article 47 is a direction to the state to raise the level of nutrition and standard of living. It
+                suggests the primary duty of the state to be working towards improving public health. Since intoxicating
+                drinks and drugs are injurious to health and thus state shall endeavor its prohibition except for
+                medical purposes.</p>
+        </div>
+
+        <button class="accordion">48. Organisation of agriculture and animal husbandry.</button>
+        <div class="panel">
+            <p>Article 48 of the Constitution of India is one of the Directive Principles which directs the state to
+                make efforts for banning the beef consumption, animal slaughtering, smuggling, and their trading with
+                neighbouring borders. It further states to organise agriculture and animal husbandry on modern and
+                scientific lines.</p>
+        </div>
+
+        <button class="accordion">48A. Protection and improvement of environment and safeguarding of forests and wild
+            life.</button>
+        <div class="panel">
+            <p>Protection and improvement of environment and safeguarding of forests and wild life The State shall
+                endeavour to protect and improve the environment and to safeguard the forests and wild life of the
+                country.</p>
+        </div>
+
+        <button class="accordion">49. Protection of monuments and places and objects of national importance.</button>
+        <div class="panel">
+            <p> Protection of monuments and places and objects of national importance – Constitution Of India
+                It shall be the obligation of the State to protect every monument or place or object of artistic or
+                historic interest, declared by or under law made by Parliament to be of national importance, from
+                spoliation, disfigurement, destruction, removal, disposal or export, as the case may be.</p>
+        </div>
+
+        <button class="accordion">50. Separation of judiciary from executive.</button>
+        <div class="panel">
+            <p>Separation of judiciary from executive.— The State shall take steps to separate the judiciary from the
+                executive in the public services of the State.</p>
+        </div>
+
+        <button class="accordion">51. Promotion of international peace and security.
+        </button>
+        <div class="panel">
+            <p> (a) promote international peace and security; (b) maintain just and honourable relations between
+                nations; (c) foster respect for international law and treaty obligations in the dealings of organized
+                peoples with one another.</p>
+        </div>
+
     </section>
 
     <div class="pages">
         <a class="active" href="laws.html">1</a>
         <a href="laws1.html">2</a>
         <a href="Laws2.html">3</a>
+        <a href="Laws3.html">4</a>
+        <a href="laws4.html">5</a>
+        <a href="laws5.html">6</a>
+        <a href="laws6.html">7</a>
+        <a href="laws7.html">8</a>
         <a href="laws1.html">&raquo;</a>
     </div>
 
