--- a/laws1.html
+++ b/laws1.html
@@ -503,6 +503,7 @@
         <a href="laws.html">1</a>
         <a class="active" href="laws1.html">2</a>
         <a href="Laws2.html">3</a>
+        <a href="laws3.html">4</a>
         <a href="laws4.html">5</a>
         <a href="laws5.html">6</a>
         <a href="laws6.html">7</a>
