--- a/laws1.html
+++ b/laws1.html
@@ -502,13 +502,13 @@
         <a href="laws.html">&laquo;</a>
         <a href="laws.html">1</a>
         <a class="active" href="laws1.html">2</a>
-        <a href="Laws2.html">3</a>
+        <a href="laws2.html">3</a>
         <a href="laws3.html">4</a>
         <a href="laws4.html">5</a>
         <a href="laws5.html">6</a>
         <a href="laws6.html">7</a>
         <a href="laws7.html">8</a>
-        <a href="Laws2.html">&raquo;</a>
+        <a href="laws2.html">&raquo;</a>
     </div>
 
     <footer>
