--- a/Contact.html
+++ b/Contact.html
@@ -36,7 +36,7 @@
         </div>
     </nav>
     <section class="contact_section">
-        <h2 class="h_primary">Contact Us</h2>
+        <h2 class="h_primary page_title">Contact Us</h2>
 
         <div class="contact_devider">
             <div>
@@ -57,7 +57,7 @@
         </div>
         </br>
         </br>
-        <h2 class="h_primary">Send us a Message</h2>
+        <h2 class="h_primary page_title">Send us a Message</h2>
 
         <div class="contact_form">
             <form action="https://formspree.io/f/mbjqpqvl" method="POST">
