--- a/about.html
+++ b/about.html
@@ -35,14 +35,15 @@
         </div>
     </nav>
 
-    <section>
+    <section class="about_section">
+        <h2 class="h_primary page_title">About-us</h2>
+
         <div class="terms">
-            <h2>About-us</h2>
-            Law in India primarily evolved from customary practices and religious prescription to the modern well
-            codified acts
-            and laws based on a constitution. This website basically shares some general information Indian Law System
-            with
-            specifications.
+            <p>In India primarily evolved from customary practices and religious prescription to the modern well
+                codified acts
+                and laws based on a constitution. This website basically shares some general information Indian Law
+                System
+                with specifications.</p>
             <P> An Internship Project was alloted to our group consisting of 5 students where we had to create this
                 website
                 based on Indian Law Information System. This website is not a professional website yet we have tried to
@@ -51,7 +52,7 @@
                 style
                 sheet to make the website look prominent. </P>
             <P>This website states the function of each laws or articles of the constitution from article 1 to article
-                100. Each
+                395. Each
                 article describes its presence and its work. We hope this website may set up the glimpse of a basic idea
                 about
                 Indian Law System.</P>
