--- a/terms.html
+++ b/terms.html
@@ -36,10 +36,8 @@
     </nav>
 
     <section>
+        <h2 class="h_primary page_title">Terms of Use</h2>
         <div class="terms">
-            <h2>Website Terms of Use</h2>
-
-            <p>Version 1.0</p>
 
             <p>The Indian Law website located at www.indianlaw.in is a copyrighted work belonging to Indian Law. Certain
                 features of the Site may be subject to additional guidelines, terms, or rules, which will be posted on
@@ -459,9 +457,6 @@
                 may
                 own the Marks.</p>
 
-            <h2>Contact Information</h2>
-
-            <p>Address: Agartala, West Tripura</p>
         </div>
     </section>
 
