updated index page...

--- a/Contact.html
+++ b/Contact.html
@@ -19,7 +19,7 @@
         <a href="index.html">
             <div class="logo">
                 <img src="Images/balance_white.png" alt="IndianLaw">
-                <h1 class="logo">IndianLaw</h1>
+                <h1 class="logo">Beed Bar Association</h1>
             </div>
         </a>
 
@@ -42,17 +42,17 @@
             <div>
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <h3>Email</h3>
-                <p>contact@indianlaw.com<br>Hi@indianlaw.com</p>
+                <p>sachinbodkhe@indianlaw.com<br>Hi@indianlaw.com</p>
             </div>
             <div>
                 <i class="fa fa-whatsapp" aria-hidden="true"></i>
                 <h3>WhatsApp</h3>
-                <p>+91 1234567890</br>+91 0000000000</p>
+                <p>+91 9130312846</br>+91 xxxxxxxxxx</p>
             </div>
             <div>
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <h3>Address</h3>
-                <p>Agartala, West Tripura,</br>Pin: 799001</p>
+                <p>kanchanwadi, Chh. Sambhajinagar,</br>Pin: 431136</p>
             </div>
         </div>
         </br>
@@ -60,7 +60,10 @@
         <h2 class="h_primary page_title">Send us a Message</h2>
 
         <div class="contact_form">
-            <form action="https://formspree.io/f/mbjqpqvl" method="POST">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfCTW5jFtiQWFMHkGkNDf4wDaRgpuWZt2ukUyDvVuz_9awvWA/viewform?embedded=true" width="500" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>  
+            
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3772.6461310438453!2d75.74833047437964!3d18.991229354629972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc52adcee0fdb95%3A0xcd7bb80ad3a5482d!2sDistrict%20%26%20Sessions%20Court%2C%20Beed!5e0!3m2!1sen!2sin!4v1683628477624!5m2!1sen!2sin" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <!-- <form action="https://formspree.io/f/mbjqpqvl" method="POST">
                 <div class="form_group">
                     <label for="firstname">First Name</label>
                     <input type="text" id="firstname" name="firstname">
@@ -82,17 +85,17 @@
                 </div>
 
                 <button type="submit" onclick="SendMessage()">SUBMIT</button>
-            </form>
-        </div>
+            </form>-->
+        </div> 
     </section>
 
     <footer>
         <div id="footer_devider">
             <div class="footer_box" id="f1">
                 <h4>Disclaimer</h4>
-                <p>
+         <p>
                     This is not an Official Website of Indian Government, This Website is Just made as Project
-                    for ICFAI University. All information Written in this website are collected from Google and some
+                    for CSMSS chh. College of Engineering. All information Written in this website are collected from Google and some
                     third-party Websites.
                 </p>
             </div>
@@ -123,7 +126,7 @@
         </div>
     </footer>
 
-    <script>
+    <!-- <script>
         burger = document.querySelector('.burger')
         Menu = document.querySelector('.menu-items')
 
@@ -135,7 +138,7 @@
         function SendMessage() {
             alert("Message Sent");
         }
-    </script>
+    </script> -->
 
 </body>
 
