--- a/laws.html
+++ b/laws.html
@@ -19,7 +19,7 @@
         <a href="index.html">
             <div class="logo">
                 <img src="Images/balance_white.png" alt="IndianLaw">
-                <h1 class="logo">IndianLaw</h1>
+                <h1 class="logo">Beed Bar Association</h1>
             </div>
         </a>
 
@@ -503,9 +503,9 @@
         <div id="footer_devider">
             <div class="footer_box" id="f1">
                 <h4>Disclaimer</h4>
-                <p>
+         <p>
                     This is not an Official Website of Indian Government, This Website is Just made as Project
-                    for ICFAI University. All information Written in this website are collected from Google and some
+                    for CSMSS chh. College of Engineering. All information Written in this website are collected from Google and some
                     third-party Websites.
                 </p>
             </div>
