added search bar successfully

--- a/Contact.html
+++ b/Contact.html
@@ -40,17 +40,17 @@
 
         <div class="contact_devider">
             <div>
-                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <i class="fa fa-envelope" aria-hidden="true" style="color: black;"></i>
                 <h3>Email</h3>
                 <p>sachinbodkhe@indianlaw.com<br>Hi@indianlaw.com</p>
             </div>
             <div>
-                <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                <i class="fa fa-whatsapp" aria-hidden="true" style="color: black;"></i>
                 <h3>WhatsApp</h3>
                 <p>+91 9130312846</br>+91 xxxxxxxxxx</p>
             </div>
             <div>
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
+                <i class="fa fa-map-marker" aria-hidden="true" style="color: black;"></i>
                 <h3>Address</h3>
                 <p>kanchanwadi, Chh. Sambhajinagar,</br>Pin: 431136</p>
             </div>
@@ -115,14 +115,14 @@
                 <p>+91 1234567890</p>
 
                 <h5>Mail</h5>
-                <p>contact@g6.in</p>
+                <p>contact@beedbar.in</p>
 
                 <h5>Address</h5>
-                <p>Agartala, West Tripura</p>
+                <p>District & Sessions Court, Beed, Maharashtra 431122</p>
             </div>
         </div>
         <div id="Footer_Credit">
-            <p>Copyright 2021 <a href="#">Indian Law</a></a></p>
+            <p>Copyright 2023 <a href="#">Indian Law</a></a></p>
         </div>
     </footer>
 
