--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="Contact.html">Contact Us</a></li>
             <li><a href="terms.html">Terms of Use</a></li>
-            <input type="text" placeholder="Search..">
-            <button type="submit">
+
+            <!-- search bar -->
+            <input id="searchbar" onkeyup="search_animal()" type="text" placeholder="Search..">
+            <!-- <button type="submit"> -->
+
+                <!-- input tag -->
+    <!-- <input id="searchbar" onkeyup="search_animal()" type="text"
+    name="search" placeholder="Search animals.."> -->
                 <!-- <i class="main-search"></i> -->
                 <i class="fa fa-search"></i>
             </button>
@@ -149,7 +155,7 @@
             </div>
         </div>
         <div id="Footer_Credit">
-            <p>Copyright 2021 <a href="#">Indian Law</a></a></p>
+            <p>Copyright 2023 <a href="#">Indian Law</a></a></p>
         </div>
     </footer>
 
