added search bar to all law pages

--- a/about.html
+++ b/about.html
@@ -39,44 +39,16 @@
         <h2 class="h_primary page_title">About-us</h2>
 
         <div class="terms">
-            <p>In India primarily evolved from customary practices and religious prescription to the modern well
-                codified acts
-                and laws based on a constitution. This website basically shares some general information Indian Law
-                System
-                with specifications.</p>
-            <P> An Internship Project was alloted to our group consisting of 5 students where we had to create this
-                website
-                based on Indian Law Information System. This website is not a professional website yet we have tried to
-                put the
-                basic information about the subject and we have tried to add some designs and styles by using cascading
-                style
-                sheet to make the website look prominent. </P>
-            <P>This website states the function of each laws or articles of the constitution from article 1 to article
-                395. Each
-                article describes its presence and its work. We hope this website may set up the glimpse of a basic idea
-                about
-                Indian Law System.</P>
-            <P>We have created this website by using VS code application. In this website, we have placed the navigation
-                bar,
-                added
-                different sections which provides lots of information relating the subject, lastly added a footer. The
-                Home page
-                has been designed gently by giving it a general look. Two to three pages are added to this website which
-                shares
-                the information about the subject. </P>
-            <P>We the team of Group number 6 have created this website under the guidance of Sir Saroj Kumar Nandi,
-                Proffessor
-                of Icfai University. Myself Sneha Gope and my team mates- Nanday Das, Diptanu Debnath, Rituparna Sen
-                were
-                constantly working on this website to present it successfully. For sure there were some other students
-                in my
-                group or team but unfortunately they did not responded well any of the day.</P>
+            <p>Welcome to our website! We are thrilled to present to you an online platform dedicated to providing comprehensive information about Indian law. My name is Sam Karl, and I am a passionate student at CSMSS College of Engineering, where I have taken it upon myself to develop this valuable resource.</p>
+            <P> At CSMSS College of Engineering, we strongly believe in the power of knowledge and the impact it can have on society. With that in mind, I embarked on this project to create a website that serves as a hub of legal information for individuals seeking to understand and navigate the complexities of Indian law.</P>
+            <P>Our website is designed to be a user-friendly and accessible resource, catering to both legal professionals and the general public. Whether you are a law student, a legal practitioner, or simply an individual interested in gaining knowledge about Indian law, our platform aims to provide accurate and reliable information.</P>
+            <P>With the ever-evolving nature of law, it can be challenging to stay up-to-date with the latest legal developments. Therefore, we have made it our mission to curate and present the most relevant and current information in a clear and concise manner. Our team of dedicated researchers ensures that the content on our website is accurate and regularly updated, allowing you to make informed decisions based on the latest legal knowledge. </P>
+            <P>By providing easy access to Indian law-related topics, we aim to bridge the gap between legal professionals and the public, making the law more understandable and accessible to all. Our website covers a wide range of legal areas, including constitutional law, criminal law, civil law, intellectual property, business law, and much more. Whether you need information on legal procedures, landmark cases, or legal rights, our website is here to assist you.</P>
+            <p>We understand the significance of reliable sources when it comes to legal information, and we strive to provide well-researched content that can be trusted. However, it is important to note that the information presented on our website should not be considered legal advice. We encourage you to consult with legal professionals or experts for specific legal matters or concerns.</p>
 
-            We are grateful to Icfai University for letting us to work on this project as we have gathered much
-            informations
-            about Indian Law System and have known how to work on a project creating a website. We would like to work on
-            further
-            projects in the future which will be given by Icfai University.
+           <p> Thank you for visiting our website and trusting us as your go-to resource for Indian law-related information. We hope that our platform proves to be a valuable asset in your quest for legal knowledge. If you have any suggestions, feedback, or questions, please feel free to reach out to us. Together, let's navigate the vast realm of Indian law and empower ourselves with knowledge.</p><br>
+            Sachin Bodkhe <br>
+            CSMSS Chh. Shahu College Of Engineering 
         </div>
     </section>
 
