--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="terms.html">Terms of Use</a></li>
 
             <!-- search bar -->
-            <input id="searchbar" onkeyup="search_animal()" type="text" placeholder="Search..">
+            <!-- <input id="searchbar" onkeyup="search_animal()" type="text" placeholder="Search.."> -->
             <!-- <button type="submit"> -->
 
                 <!-- input tag -->
@@ -151,7 +151,7 @@
                 <p>sachinbodkhe@lawfim.com</p>
 
                 <h5>Address</h5>
-                <p>kanchanwadi</p>
+                <p>District & Sessions Court, Beed, Maharashtra 431122</p>
             </div>
         </div>
         <div id="Footer_Credit">
