--- a/laws5.html
+++ b/laws5.html
@@ -31,6 +31,10 @@
             <li><a href="terms.html">Terms of Use</a></li>
         </ul>
 
+          <!-- search bar -->
+          <input id="searchbar" onkeyup="search_animal()" type="text" placeholder="Search..">
+          <!-- <button type="submit"> -->
+
         <div class="burger">
             <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
@@ -792,7 +796,8 @@
             <p>Copyright 2021 <a href="#">Indian Law</a></a></p>
         </div>
     </footer>
-
+ <!-- linking javascript -->
+ <script src="/animals.js"></script>
     <script>
         var acc = document.getElementsByClassName("accordion");
         var i;
