added main Image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="Section1">
         <div id="div1">
-            <img src="Images/lawyer_set_4.jpg" alt="heroImage">
+            <img src="Images/ashok-strambh.png" alt="heroImage">
            
         </div>
         <div id="div2">
